TP6-nginx-deployment-latest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsnginx
  labels:
    role: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: web
      labels:
        app: nginx
        type: pod
        formateur: Frazer
    spec:
      containers:
        - name: web1
          image: nginx
          ports:
            - containerPort: 8080
