tp7-webappcolor.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: webappred
  labels:
    app: webapp
    env: prod
spec:
  containers:
  - name: webappred
    image: kodekloud/webapp-color
    ports:
    - containerPort: 8080
