tp8-pod-red.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: webappred
  labels:
    app: web
    namespace: production
spec:
  containers:
  - name: webappred
    image: kodekloud/webapp-color
    ports:
    - containerPort: 8080
