tp9-pod-mysql.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-volume
  labels:
    app: mysql
    namespace: production
spec:
  containers:
  - name: mysql
    image: mysql
    ports:
    - containerPort: 3306
    volumeMounts:
    - mountPath: /var/lib/mysql
      name: data-volume
    
  volumes:
    - name: data-volume
      hostPath:
        path: /tmp/mysqldata
        type: DirectoryOrCreate
